# keenetic-vpn-switcher

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
