[project]
name = "keenetic-vpn-switcher"
version = "0.1.0"
description = "Private Telegram bot for toggling VPN policies for selected devices on a Keenetic router."
readme = "README.md"
requires-python = ">=3.14"

dependencies = ["requests>=2.34.2", "python-telegram-bot>=22.8"]

[dependency-groups]
dev = [
  "deptry>=0.25.1",
  "prek>=0.4.5",
  "pysentry-rs>=0.4.6",
  "ruff>=0.15.17",
  "ty>=0.0.49",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG", "PL", "RUF"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pysentry.defaults]
fail_on = "low"

[tool.pysentry.sources]
enabled = ["pypa", "pypi", "osv"]

[tool.deptry]
known_first_party = ["config", "main"]

[tool.vulture]
paths = ["config.py", "main.py"]
min_confidence = 100
sort_by_size = true

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]
