[project]
name = "keenetic-vpn-switcher"
version = "0.1.0"
description = "Private Telegram bot for switching selected Keenetic devices between VPN and non-VPN policies."
authors = [{ name = "Ruslan Khasanshin" }]
readme = "README.md"
requires-python = ">=3.14"

dependencies = ["python-telegram-bot>=22.8", "requests>=2.34.2"]

[project.urls]
Repository = "https://github.com/hu553in/keenetic-vpn-switcher"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "deptry>=0.25.1",
  "prek>=0.4.10",
  "pysentry-rs>=0.4.7",
  "ruff>=0.15.22",
  "ty>=0.0.62",
  "vulture>=2.16",
]

[tool.uv]
link-mode = "copy"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "ARG",
  "PL",
  "RUF",
  "C4",
  "FA",
  "N",
  "PERF",
  "W",
  "PGH004",
  "T10",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pysentry.defaults]
fail_on = "low"

[tool.pysentry.sources]
enabled = ["pypa", "pypi", "osv"]

[tool.deptry]
known_first_party = ["config", "main"]

[tool.vulture]
paths = ["config.py", "main.py"]
min_confidence = 100
sort_by_size = true
